--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ $RECYCLE.BIN/
 # These should never be under version control,
 # as it poses a security risk.
 .env
+public/info.php
+.htaccess
+public/.htaccess
+app/Config/Database.php
 .vagrant
 Vagrantfile
 
